[BYL_CV] Update layout, home and experience page

--- a/src/app/components/header/_index.scss
+++ b/src/app/components/header/_index.scss
@@ -1,5 +1,5 @@
 header {
-  @apply h-14  bg-white border-b border-gray-100;
+  @apply bg-white border-b border-gray-100;
 
   .header__menu-link,
   .header__theme {
